--- a/public/404.html
+++ b/public/404.html
@@ -3,6 +3,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
+  <title>All PGS's COVID-19 Bot!</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@600;900&display=swap" rel="stylesheet">
   <style>
@@ -70,7 +71,7 @@
     <div class="err">4</div>
     <i class="far fa-question-circle fa-spin"></i>
     <div class="err2">4</div>
-    <div class="msg">Maybe this page moved? Got deleted? Is hiding out in quarantine? Never existed in the first place?<p>Let's go <a href="#">home</a> and try from there.</p></div>
+    <div class="msg">파일이 제거되었거나,<br>주소를 잘못 입력하셨습니다.<p><a href="/">메인으로</a>&nbsp;돌아가주시기 바랍니다.</p></div>
       </div>
 </body>
 </html>
